# stretch_mujoco

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE_REALSENSE  MUJOCO_LOG.TXT  README.md  __init__.py  d435i.xml  docking.py  fixation.py  fixation.xml  floating_realsense.xml  gamepad_controller.py  launch_sim.py  mkdocs.yml  pyproject.toml  realsense_mujoco.py  setup.py  stretch.xml  stretch_mujoco.py  stretch_mujoco_gamepad.py  test_gen.py  test_one_process.py  utils.py
.github/workflows/: auto_deploy_docs.yaml  pre-commit.yaml
assets/: link_SG3_gripper_right_finger.stl
docs/: building_capi.md  contributing.md  getting_started.ipynb  mujoco_server_process_diagram.drawio  mujoco_simulator.md  releasing_to_pypi.md  using_mujoco_simulator_with_stretch.md
examples/: REx_setup_autodocking.py  autodocking.py  camera_feeds.py  draw_circles.py  gamepad_teleop.py  keyboard_teleop.py  laser_scan.py  laser_work.py  move_joints.py  path_render.py  robocasa_environment.py  start_pose.py  stretch_mujoco_gamepad.py  test_one_process.py  test_one_process_passive.py  wip_work.py  world_frames.py
examples/rlearning/: dm_control_ppo.ipynb
models/: stretch.xml
src/: setup.py  stretch_mujoco.py
stretch_mujoco/: __init__.py  __main__.py  cameras.py  config.py  headless_render.cpp  mujoco_headless_render.cpp  mujoco_server.py  mujoco_server_camera_manager.py  mujoco_server_managed.py  mujoco_server_passive.py  mujoco_server_sensor_manager.py  mujoco_stretch_sim.cpp  mujoco_stretch_sim.h  profiling.py  robocasa_gen.py  run.py  status.py  stretch_mujoco.py  stretch_mujoco_ctypes.py  stretch_mujoco_simulator.py  stretch_mujoco_simulator_efficient.py  test.cpp  utils.py
stretch_mujoco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stretch_mujoco/datamodels/: status_command.py  status_stretch_camera.py  status_stretch_joints.py  status_stretch_sensors.py
stretch_mujoco/enums/: actuators.py  cameras.py  stretch_cameras.py  stretch_sensors.py
stretch_mujoco/mjx/: pick.py  pick_cartesian.py  pinocchio_ik_solver.py  randomize_vision.py  stretch.py  stretch_mjx_manipulation.ipynb  stretch_mjx_manipulator_with_vision.ipynb
stretch_mujoco/mjx/models/: scene-mjx.xml  stretch-mjx.xml
stretch_mujoco/mjx/models/assets-mjx/: link_SG3_gripper_fingertip_collision_old.stl  link_SG3_gripper_left_finger.stl
stretch_mujoco/models/: dock_pen.xml  docking_station.xml  scene.xml  stretch.xml  stretch_mj_3.3.0.xml  stretch_v2.xml  stretch_wtransparentarm.xml
stretch_mujoco/rlearning/: dm_control_ppo.ipynb
stretch_ros2_mujoco/: package.xml  setup.cfg  setup.py
stretch_ros2_mujoco/launch/: stretch_driver.launch.py
stretch_ros2_mujoco/src/: joint_trajectory_server.py  stretch_driver.py  stretch_driver_alfred.py
tests/: test_one_process.py
