[project]
name = "hello-robot-stretch-mujoco"
version = "0.5.0"
description = "A Stretch simulation in MuJoCo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "hello-robot-stretch-urdf>=0.1.0",
    "inputs>=0.5",
    "matplotlib>=3.10.1",
    "mujoco==3.2.6", # 3.2.6 is required for Robocasa compatibility
    "opencv-python",
    "pynput>=1.8.1",
    "urchin>=0.0.29",
]
authors = [
    {name = "Binit Shah", email = "bshah@hello-robot.com"},
    {name = "Shehab Attia", email = "sattia@hello-robot.com"},
]
license = { file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.gui-scripts]
launch_sim = "stretch_mujoco.launch_sim:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "stretch_mujoco"
module-root = ""
source-exclude = ["third_party/**", "tests/**"]

[project.urls]
Source = "https://github.com/hello-robot/stretch_mujoco"
Tracker = "https://github.com/hello-robot/stretch_mujoco/issues"

[tool.black]
line-length = 100

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "flake8",
    "black",
    "mypy",
]
jupyter = [
    "ipykernel",
    "ipython",
]
robocasa = [
     # Python 3.10 is required for Robocasa compatibility
    "opencv-python==4.8.0.76",
    "numpy==1.23.5",
    "numba==0.59"
]
